overlays/flux/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: github-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # 公開ホスト名
  - host: flux.github.frieza.local
    http:
      # パスベースルーティング
      paths:
      # API Gateway
      - path: /api/v1
        backend:
          serviceName: api-gateway
          servicePort: 80
      # Vue.js
      - path: /
        backend:
          serviceName: repo-search-ui
          servicePort: 80
